// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MinimizeIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinimizeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.996 10.828c.002.002 0 4.172 0 4.172H5v-4H1l.003-1.993s4.23-.002 4.233 0c.813-.077 1.295.507 1.295.507s.523.5.466 1.314zM11 5V1l-1.993.003s-.002 4.23 0 4.233c-.077.813.507 1.295.507 1.295s.5.522 1.314.466c.002.002 4.172 0 4.172 0V5h-4z"
  />
</Icon>
`;

exports[`MinimizeIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinimizeIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.996 10.828c.002.002 0 4.172 0 4.172H5v-4H1l.003-1.993s4.23-.002 4.233 0c.813-.077 1.295.507 1.295.507s.523.5.466 1.314zM11 5V1l-1.993.003s-.002 4.23 0 4.233c-.077.813.507 1.295.507 1.295s.5.522 1.314.466c.002.002 4.172 0 4.172 0V5h-4z"
  />
</Icon>
`;

exports[`MinimizeIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-MinimizeIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M6.996 10.828c.002.002 0 4.172 0 4.172H5v-4H1l.003-1.993s4.23-.002 4.233 0c.813-.077 1.295.507 1.295.507s.523.5.466 1.314zM11 5V1l-1.993.003s-.002 4.23 0 4.233c-.077.813.507 1.295.507 1.295s.5.522 1.314.466c.002.002 4.172 0 4.172 0V5h-4z"
  />
</Icon>
`;
